# Edge-Audio-Processing

./: .gitignore  README.md  pyproject.toml  quick_start.py  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
demo/: app.py
scripts/: evaluate.py  train.py
src/: __init__.py
src/export/: __init__.py  deployment.py
src/models/: __init__.py  audio_models.py  compression.py
src/pipelines/: __init__.py  training.py
src/utils/: __init__.py  audio.py  core.py
tests/: test_edge_audio.py
